fix: hero section overflow on x-axis

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,9 +10,7 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
+html {
   overflow-x: hidden;
 }
 
@@ -21,6 +19,7 @@ body {
 
   display: flex;
   flex-direction: column;
+  max-width: 100vw;
   min-height: 100vh;
 
   @screen mobile_md {
@@ -39,7 +38,7 @@ main {
   flex-direction: column;
   flex: 1;
 
-  &>div {
+  & > div {
     display: flex;
     flex-direction: column;
     flex: 1;
